# cookiecutter-pypackage

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .travis.yml  Makefile  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
